doc: atualização documentação dos endpoints de produtos
